added basic-auth to post method album/create
